--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reach/router": "^1.2.1",
-    "antd": "^3.13.5",
-    "classnames": "^2.2.6",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "@reach/router": "latest",
+    "antd": "3.16.6",
+    "classnames": "2.2.6",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-scripts": "2.1.4"
   },
   "scripts": {
@@ -16,10 +16,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
