--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "classnames": "2.2.6",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "2.1.4"
+    "react-scripts": "2.1.4",
+    "firebase": "5.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,5 +17,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
