--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "@reach/router": "latest",
     "antd": "3.16.6",
     "classnames": "2.2.6",
+    "firebase": "5.11.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "2.1.4",
-    "firebase": "5.11.1"
+    "react-scripts": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
