--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reach/router": "latest",
-    "antd": "3.16.6",
+    "@reach/router": "1.2.1",
+    "antd": "3.26.6",
     "classnames": "2.2.6",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-scripts": "2.1.4",
-    "firebase": "5.11.1"
+    "firebase": "7.6.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
