--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "yarn build" # the command you run to build this file
+  command = "npm run build" # the command you run to build this file
   publish = "build" # create-react-app builds to this folder, Netlify should serve all these files statically
 [[redirects]]
   from = "/*"
