--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@reach/router": "1.3.1",
     "antd": "3.26.6",
     "firebase": "7.6.2",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-scripts": "^3.0.1"
   },
   "scripts": {
