--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@paypal/react-paypal-js": "^7.3.3",
     "@reach/router": "1.3.4",
     "antd": "4.15.0",
-    "firebase": "8.3.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-scripts": "4.0.3"
+    "react-dom": "17.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +20,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-scripts": "4.0.3"
+  }
 }
