--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "dependencies": {
     "@paypal/react-paypal-js": "^7.3.3",
-    "@reach/router": "1.3.4",
     "antd": "4.15.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^13.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "browserslist": [
     ">0.2%",
@@ -22,6 +22,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "react-scripts": "5.0.1"
+    "eslint": "8.39.0",
+    "eslint-config-next": "13.3.4"
   }
 }
