--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.1",
     "@paypal/react-paypal-js": "^7.3.3",
     "antd": "4.15.0",
     "next": "^13.3.4",
