--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "antd": "4.15.0",
     "next": "^13.3.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sharp": "^0.32.1"
   },
   "scripts": {
     "dev": "next dev",
