--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@paypal/react-paypal-js": "^7.3.3",
     "antd": "4.15.0",
     "next": "^13.3.4",
+    "next-plugin-yaml": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.32.1"
