--- a/data/gauntlet.yml
+++ b/data/gauntlet.yml
@@ -34,3 +34,9 @@
 - name: Cam
   time: 1:44
   position: forward
+- nam: Z
+  time: 1:54.9
+  position: forward
+- name: Bert
+  time: 1:49
+  position: forward
