--- a/data/gauntlet.yml
+++ b/data/gauntlet.yml
@@ -32,7 +32,7 @@
   time: 1:57
   position: back
 - name: Cam
-  time: 1:44
+  time: Imaginary Number
   position: forward
 - name: Bert
   time: 1:46.7
