--- a/data/gauntlet.yml
+++ b/data/gauntlet.yml
@@ -3,8 +3,10 @@
   time: 1:46.2
 - name: Tristan
   position: Forward
-  time: 1:43.5
+  time: 1:38.9
 - name: James
   position: Forward
   time: 1:45.5
- 
+- name: Bart
+  position: Forward
+  time: 1:39.7
