--- a/data/store.yml
+++ b/data/store.yml
@@ -34,5 +34,7 @@
   options:
   - name: "Shirt - $20"
     value: 20
+  - name: "Shorts - $30"
+    value: 30
   - name: Misc Lost Stuff - $5
     value: 5
