--- a/data/store.yml
+++ b/data/store.yml
@@ -1,7 +1,7 @@
 - name: dues
   defaultAmount: 200
   description: Player Dues
-  info: "Fall Season: $200"
+  info: "Spring Season: $200"
   title: Pay your dues. Play rugby.
   options: 
   - name: "Player Dues - $200"
