--- a/data/forms.yml
+++ b/data/forms.yml
@@ -3,4 +3,5 @@
   name: ASR Travel Form
   description: Info for travel to 2025 Atlantic Super Regionals
   width: 640 
-  height: 2731 
+  height: 2731
+  hide: false
