--- a/data/store.yml
+++ b/data/store.yml
@@ -48,6 +48,7 @@
     - Keith Gasior
     - John Long
     - Jack Hume
+    - Cam Hoppman
 - name: dues
   defaultAmount: 200
   description: Player Dues
