add travel form

--- a/data/forms.yml
+++ b/data/forms.yml
@@ -18,3 +18,10 @@
   width: 640
   height: 1496
   hide: true
+- id: nationals
+  formId: 1FAIpQLSf-NGqFMyIB47ctM1YMg-iW3SZy79W7V4fEwlffBNRr8W-0qw
+  name: Nationals Travel Form
+  description: Travel information for the Club National Tournament
+  width: 700
+  height: 520
+  hide: false
