--- a/data/store.yml
+++ b/data/store.yml
@@ -13,11 +13,15 @@
   donation: true
   details: Rocky Gorge has won the Atlantic Super Regional and will be headed to the National Championship in Indianapolis from May 15 to May 18. Your donation will help cover travel expenses for the club rugby national championship. Thank you for your support! And thank you to everyone that has donated already.
   supporters:
+    - Josh Brown
+    - Matt Titman
+    - Tony Ayigah
     - Tom "Tiny" Gregoire
     - Mark Fredlund
     - Anthony Cinotti
     - Michael Canterbury
     - Micky Bressler
+    - Anthony D'orsaneo
     - Thomas Harris
     - Jake Saintcross
     - Rico Colon
