--- a/data/store.yml
+++ b/data/store.yml
@@ -13,6 +13,11 @@
   donation: true
   details: Rocky Gorge has won the Atlantic Super Regional and will be headed to the National Championship in Indianapolis from May 15 to May 18. Your donation will help cover travel expenses for the club rugby national championship. Thank you for your support! And thank you to everyone that has donated already.
   supporters:
+    - Janelle Dunbar
+    - Ellen Burns
+    - Rushan Abayagunawardena
+    - Jay Kaminski
+    - Adam Klein
     - Josh Brown
     - Matt Titman
     - Tony Ayigah
