--- a/data/links.yml
+++ b/data/links.yml
@@ -1,3 +1,7 @@
+- link: /banquet
+  title: 2025 Banquet
+  description: Buy your tickets for the 2025 banquet.
+  header: false
 - link: /sponsors
   title: Advertise with Us
   description: Become a jersey sponsor
