--- a/data/gauntlet.yml
+++ b/data/gauntlet.yml
@@ -1,36 +1,3 @@
-- name: Koch
+- name: Not James
   position: Forward
-  time: 1:40.1
-- name: Tristan
-  position: Forward
-  time: 1:38.9
-- name: James
-  position: Forward
-  time: 1:48.0
-- name: Bart
-  position: Forward
-  time: 1:39.7
-- name: Julian
-  position: Back
-  time: 1:44.7
-- name: Cam 
-  position: Forward
-  time: 1:42.3
-- name: Isaac 
-  position: Forward
-  time: 1:56.7
-- name: Wiley
-  position: Forward
-  time: 1:50.8
-- name: Bert
-  position: Forward
-  time: 1:46
-- name: Jake
-  time: 1:53
-  position: Forward
-- name: Ben
-  time: 1:52.8
-  position: Forward
-- name: Jake H
-  time: 1:54
-  position: Unknown
+  time: 2:00.0
