--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mdx-js/loader": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.4.1",
-    "@paypal/react-paypal-js": "^7.3.3",
-    "antd": "4.15.0",
-    "next": "^13.3.4",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^15.5.4",
+    "@paypal/react-paypal-js": "^8.9.1",
+    "antd": "5.27.4",
+    "next": "^15.5.4",
     "next-plugin-yaml": "^1.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sharp": "^0.32.1"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "sharp": "^0.34.4"
   },
   "scripts": {
+    "start": "next start",
     "dev": "next dev",
     "build": "next build",
     "lint": "next lint"
@@ -26,7 +27,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.4"
+    "eslint": "9.36.0",
+    "eslint-config-next": "15.5.4"
   }
 }
