--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "sharp": "^0.34.4"
   },
   "scripts": {
-    "start": "next start",
+    "start": "next dev",
     "dev": "next dev",
     "build": "next build",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "browserslist": [
     ">0.2%",
@@ -27,6 +27,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "eslint": "9.36.0",
     "eslint-config-next": "15.5.4"
   }
