--- a/data/store.yml
+++ b/data/store.yml
@@ -117,7 +117,7 @@
   defaultAmount: 200
   description: Supporter Dues
   info: "Spring Season: $200"
-  title: Pay your dues. Support Rocky Gorge Rugby.
+  title: Pay your damn dues! Support Rocky Gorge Rugby.
   options: []
   subscriptions:
   - name: GODs Tier
