--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   ],
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@types/node": "24.6.0",
     "eslint": "9.36.0",
     "eslint-config-next": "15.5.4"
   }
