--- a/data/store.yml
+++ b/data/store.yml
@@ -134,14 +134,14 @@
       - label: 'Sponsor a Player : $300.00 USD - yearly'
         value: Sponsor a Player
 - name: gear
-  defaultAmount: 5
+  defaultAmount: 140
   description: Team Gear
   info: Shirts and Shorts
   title: Buy team gear
   options:
-  - name: Boathouse Warmup Jacket
+  - name: Boathouse Warmup Jacket - $140
     value: 140
-  - name: Warmup Jacket with Name Only
+  - name: Warmup Jacket with Name Only - $135
     value: 135
   - name: Misc Lost Stuff - $5
     value: 5
