--- a/data/store.yml
+++ b/data/store.yml
@@ -143,5 +143,5 @@
     value: 140
   - name: Warmup Jacket with Name Only - $135
     value: 135
-  - name: Misc Lost Stuff - $5
-    value: 5
+  - name: Troll Toll
+    value: 15
