--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sharp": "^0.32.1"
   },
   "scripts": {
+    "start": "next dev",
     "dev": "next dev",
     "build": "next build",
     "lint": "next lint"
